@@ -1,5 +1,10 @@
 2010-08-28  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/term/gfxterm.c (grub_gfxterm_term_fini): Free the text buffer.
+	(scroll_up): Fix a memory leak.
+
+2010-08-28  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/nilfs2.c (grub_nilfs2_load_sb): Handle grub_disk_read
 	errors.
 
